Fix bug cannot detect MacOS
