# backend/swagger.json
@@ -149,11 +149,12 @@
             "type": "string",
             "enum": [
               "Opera",
-              "Internet Explorer",
               "Chrome",
-              "Firefox",
               "Safari",
-              "Unknown"
+              "Firefox",
+              "Edge",
+              "Samsung",
+              "Unknown Browser"
             ]
           },
           "os": {
@@ -164,7 +165,7 @@
               "Linux",
               "Android",
               "iOS",
-              "Unknown"
+              "Unknown OS"
             ]
           },
           "endpoint": {
@@ -898,7 +899,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/User"
+                    "$ref": "#/components/schemas/Subscription"
                   }
                 }
               }
@@ -918,11 +919,12 @@
                     "type": "string",
                     "enum": [
                       "Opera",
-                      "Internet Explorer",
                       "Chrome",
-                      "Firefox",
                       "Safari",
-                      "Unknown"
+                      "Firefox",
+                      "Edge",
+                      "Samsung",
+                      "Unknown Browser"
                     ]
                   },
                   "os": {
@@ -933,7 +935,7 @@
                       "Linux",
                       "Android",
                       "iOS",
-                      "Unknown"
+                      "Unknown OS"
                     ]
                   },
                   "endpoint": {
